# miner

./: CMakeLists.txt  README.md
.circleci/: config.yml
examples/: README.md
examples/miner/2-conjunct/: 2-conjunct.scm  README.md
examples/miner/mozi-ai/: README.md  mine-mozi-ai.scm  mozi-ai-utils.scm  surp-mozi-ai.scm
examples/miner/mozi-ai/kbs/: mozi-ai-sample.scm.xz
examples/miner/simple/: README.md  simple.scm
examples/miner/sumo/: README.md  mine-sumo.scm
examples/miner/sumo/results/: Geography-ms5-mi500-mc2-mv2-nisurp.scm
examples/miner/ugly-male-soda-drinker/: ugly-male-soda-drinker.scm
opencog/: CMakeLists.txt  README
opencog/benchmark/: README.md
opencog/comboreduct/main/: eval-table.cc
opencog/miner/: CMakeLists.txt  HandleTree.cc  HandleTree.h  Miner.cc  Miner.h  MinerLogger.cc  MinerLogger.h  MinerSCM.cc  MinerUtils.cc  MinerUtils.h  README.md  Surprisingness.cc  Surprisingness.h  Valuations.cc  Valuations.h  miner-utils.scm  miner.scm
opencog/miner/rules/: CMakeLists.txt  conjunction-expansion.scm  emp.scm  est.scm  i-surprisingness.scm  jsd-surprisingness.scm  jsd.scm  miner-rule-utils.scm  shallow-abstraction.scm  shallow-specialization.scm  specialization.scm
opencog/miner/scm/: CMakeLists.txt  miner.scm
opencog/miner/scm/miner/: miner-utils.scm
opencog/miner/scm/miner/rules/: conjunction-expansion.scm  emp.scm  est.scm  i-surprisingness.scm  jsd-surprisingness.scm  jsd.scm  miner-rule-utils.scm  shallow-abstraction.scm  shallow-specialization.scm  specialization.scm
tests/: CMakeLists.txt
tests/miner/: CMakeLists.txt  MinerUTest.cxxtest  MinerUTestUtils.cc  MinerUTestUtils.h  SurprisingnessUTest.cxxtest  TestTypes.cc  ValuationsUTest.cxxtest  test_types.script
tests/miner/scm/: inference-control-corpus.scm
